--- a/src/main/resources/Form/WarehouseModule/GroupProductManager/TabpaneGroupProductMain.fxml
+++ b/src/main/resources/Form/WarehouseModule/GroupProductManager/TabpaneGroupProductMain.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.*?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.GroupProductController.TabpaneGroupProductController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.GroupProductController.TabpaneGroupProductController">
   <tabs>
-    <Tab fx:id="id_TabNhomSanPham" text="Thêm Nhóm Sản Phẩm" />
-    <Tab text="Thống Kê" />
+    <Tab fx:id="id_TabNhomSanPham" text="Add Group Product" />
+    <Tab text="Statistic" />
   </tabs>
 </TabPane>
