--- a/src/main/resources/Form/WarehouseModule/GroupProductManager/addGroupProduct.fxml
+++ b/src/main/resources/Form/WarehouseModule/GroupProductManager/addGroupProduct.fxml
@@ -6,23 +6,36 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.GroupProductController.addGroupProductController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20.0" stylesheets="@../../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.GroupProductController.addGroupProductController">
    <children>
-      <Label text="Thêm Nhóm Sản Phẩm" />
+      <Label text="*ADD PRODUCT GROUP*">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font></Label>
       <HBox spacing="10.0">
          <children>
-            <Label prefWidth="210.0" text="Tên Nhóm Sản Phẩm" />
+            <Label prefWidth="210.0" text="Product Group Name:">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
             <TextField fx:id="id_TenNhomSanPham" prefWidth="300.0" />
          </children>
       </HBox>
       <HBox spacing="10.0">
          <children>
-            <Label prefWidth="210.0" text="Phần Trăm Tiền Nhân Viên Bán Hàng" />
+            <Label prefWidth="210.0" text="Salesman Commission:">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
             <TextField fx:id="id_PhanTramNhanVien" prefWidth="300.0" />
          </children>
       </HBox>
-      <Button mnemonicParsing="false" onAction="#themNhomSanPham" text="Thêm" />
+      <Button mnemonicParsing="false" onAction="#themNhomSanPham" styleClass="btn" text="ADD">
+         <font>
+            <Font name="System Bold Italic" size="16.0" />
+         </font></Button>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
