--- a/src/main/resources/Form/WarehouseModule/ProductManager/addProduct.fxml
+++ b/src/main/resources/Form/WarehouseModule/ProductManager/addProduct.fxml
@@ -9,11 +9,14 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="Controller.WarehouseController.ProductController.addProductController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.ProductController.addProductController">
    <children>
-      <Label text="Nhập Sản Phẩm" />
+      <Label text="*Product Info Input*">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font></Label>
       <GridPane hgap="10.0" prefHeight="500.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="148.0" />
@@ -31,26 +34,50 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Tên Sản Phẩm" />
-            <Label text="Đơn Vị Tính" GridPane.rowIndex="1" />
-            <Label text="Đơn Giá Bán Lẻ" GridPane.rowIndex="4" />
-            <Label text="Đơn Giá Bán Sỉ" GridPane.rowIndex="5" />
-            <Label text="Phần Trăm Lợi Nhuận" GridPane.rowIndex="6" />
-            <Label text="Dự Tính Giá Bán " GridPane.rowIndex="7" />
+            <Label text="Product Name:">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <Label text="Unit:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <Label text="Price:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <Label text="Retail Price:" GridPane.rowIndex="5">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <Label text="Rate Profit" GridPane.rowIndex="6">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <Label text="Estimated Selling Price:" GridPane.rowIndex="7">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
             <TextField fx:id="id_TenSanPham" GridPane.columnIndex="1" />
             <TextField fx:id="id_GiaBanLe" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="id_GiaBanSi" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <TextField fx:id="id_PhanTramLoiNhuan" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <TextField fx:id="id_DuTinhGiaBan" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <ComboBox fx:id="id_DonViTinh" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onAction="#tinhGiaBan" text="Tính Giá Bán" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-            <Label text="Lượng Tồn Kho Tối Thiểu" GridPane.rowIndex="3" />
+            <ComboBox fx:id="id_DonViTinh" prefWidth="150.0" promptText="Select Unit" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" onAction="#tinhGiaBan" prefHeight="25.0" prefWidth="107.0" styleClass="btn" stylesheets="@../../style.css" text="Price Calculate" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <Label text="Minimum Inventory:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
             <TextField fx:id="id_TonKhoToiThieu" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label text="Nhóm Sản Phẩm" GridPane.rowIndex="2" />
-            <ComboBox fx:id="id_NhomSanPham" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Product Group:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <ComboBox fx:id="id_NhomSanPham" prefHeight="25.0" prefWidth="172.0" promptText="Select Product Group" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button mnemonicParsing="false" onAction="#nhapSanPham" text="Nhập Sản Phẩm" />
+      <Button mnemonicParsing="false" onAction="#nhapSanPham" styleClass="btn" stylesheets="@../../style.css" text="Product Warehouse" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
