--- a/src/main/resources/Form/WarehouseModule/UnitManager/TabpaneUnitMain.fxml
+++ b/src/main/resources/Form/WarehouseModule/UnitManager/TabpaneUnitMain.fxml
@@ -5,7 +5,7 @@
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.UnitController.TabpaneUnitContriller">
   <tabs>
-    <Tab fx:id="id_TabThemDonVi" text="Thêm Đơn Vị" />
+    <Tab fx:id="id_TabThemDonVi" text="Unit Add" />
     <Tab text="Untitled Tab 2" />
   </tabs>
 </TabPane>
