--- a/src/main/resources/Form/WarehouseModule/addWarehouse.fxml
+++ b/src/main/resources/Form/WarehouseModule/addWarehouse.fxml
@@ -9,10 +9,14 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.addWarehouseController">
    <children>
-      <Label text="Thêm Kho Hàng" />
+      <Label text="*ADD WAREHOUSE*">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
       <GridPane>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="110.0" />
@@ -24,15 +28,27 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Tên" />
-            <Label text="Địa Chỉ" GridPane.rowIndex="1" />
-            <Label text="Loại Kho" GridPane.rowIndex="2" />
+            <Label text="Name:">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label text="Address" GridPane.rowIndex="1">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
+            <Label text="Type:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="15.0" />
+               </font></Label>
             <TextField fx:id="id_TenKho" GridPane.columnIndex="1" />
             <TextField fx:id="id_DiaChiKho" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ComboBox fx:id="id_LoaiKho" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ComboBox fx:id="id_LoaiKho" prefWidth="200.0" promptText="Select Warehouse Type" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Button mnemonicParsing="false" onAction="#themKho" text="Thêm" />
+      <Button mnemonicParsing="false" onAction="#themKho" prefHeight="45.0" prefWidth="77.0" styleClass="btn" stylesheets="@../style.css" text="ADD">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font></Button>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
