--- a/src/main/resources/Form/WarehouseModule/exportProductWarehouse.fxml
+++ b/src/main/resources/Form/WarehouseModule/exportProductWarehouse.fxml
@@ -8,25 +8,41 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.exportProductWarehouse">
    <children>
-      <Label text="Bảng Tồn Kho" />
-      <Label fx:id="id_LbTenSP" text="Tên Sản Phẩm" />
+      <Label text="*INVENTORY MANAGE*">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label fx:id="id_LbTenSP" text="Product Name">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
       <HBox alignment="TOP_CENTER" spacing="20.0">
          <children>
-            <Label text="Kho " />
-            <ComboBox fx:id="id_ComboBoxKho" prefWidth="150.0" />
-            <Button mnemonicParsing="false" onAction="#xemTonKho" text="Xem" />
+            <Label text="Warehouse:">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <ComboBox fx:id="id_ComboBoxKho" prefWidth="150.0" promptText="Select Warehouse" />
+            <Button mnemonicParsing="false" onAction="#xemTonKho" prefHeight="27.0" prefWidth="77.0" styleClass="btn" stylesheets="@../style.css" text="Search" textFill="#fffdfd">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font></Button>
          </children>
       </HBox>
       <TableView fx:id="id_TableSPTonKho" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn fx:id="id_ColSoLuong" prefWidth="75.0" text="Số Lượng" />
-          <TableColumn fx:id="id_ColNgayNhap" prefWidth="75.0" text="Ngày Nhập" />
+          <TableColumn fx:id="id_ColSoLuong" prefWidth="75.0" text="Amount" />
+          <TableColumn fx:id="id_ColNgayNhap" prefWidth="127.0" text="Warehousing Date" />
         </columns>
       </TableView>
-      <Button mnemonicParsing="false" onAction="#xuatKho" text="Xuất Kho" />
+      <Button mnemonicParsing="false" onAction="#xuatKho" prefHeight="15.0" prefWidth="100.0" styleClass="btn" stylesheets="@../style.css" text="Delivery">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
