--- a/src/main/resources/Form/MainForm/DashBoard.fxml
+++ b/src/main/resources/Form/MainForm/DashBoard.fxml
@@ -116,7 +116,7 @@
                      <content>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openWarehouseList" prefHeight="31.0" prefWidth="247.0" styleClass="btn" stylesheets="@../style.css" text="Warehouse List">
+                              <Button contentDisplay="TOP" mnemonicParsing="false" onAction="#openWarehouseList" prefHeight="31.0" prefWidth="247.0" styleClass="btn" stylesheets="@../style.css" text="Warehouse Manage">
                                  <font>
                                     <Font name="System Bold" size="12.0" />
                                  </font>
@@ -172,42 +172,6 @@
                                     <ImageView fitHeight="27.0" fitWidth="103.0" pickOnBounds="true">
                                        <image>
                                           <Image url="@../../Photo/discount-ribbon-tag-label-sale-shop-shopping-1-24561.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
-                              <Button contentDisplay="TOP" layoutX="25.0" layoutY="255.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="230.0" styleClass="btn" stylesheets="@../style.css" text="Warehousing Manage">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                                 <graphic>
-                                    <ImageView fitHeight="35.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../Photo/warehousing-and-distribution-612884.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
-                              <Button contentDisplay="TOP" layoutX="25.0" layoutY="313.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="230.0" styleClass="btn" stylesheets="@../style.css" text="Inventory Manage">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                                 <graphic>
-                                    <ImageView fitHeight="35.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../Photo/inventory-management-1857611-1575340.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </Button>
-                              <Button contentDisplay="TOP" layoutX="25.0" layoutY="379.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="230.0" styleClass="btn" stylesheets="@../style.css" text="Delivery Manage">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font>
-                                 <graphic>
-                                    <ImageView fitHeight="35.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../../Photo/delivery.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
