--- a/src/main/resources/Form/WarehouseModule/DiscountManager/addDiscount.fxml
+++ b/src/main/resources/Form/WarehouseModule/DiscountManager/addDiscount.fxml
@@ -3,15 +3,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.DiscountController.addDiscountController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="574.0" prefWidth="682.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.WarehouseController.DiscountController.addDiscountController">
    <children>
       <Label text="*ADD DISCOUNT INFO*">
          <font>
@@ -26,29 +29,45 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Product Discount:">
                <font>
                   <Font size="13.0" />
                </font></Label>
-            <ComboBox prefHeight="25.0" prefWidth="202.0" promptText="Select Product" GridPane.columnIndex="1" />
+            <ComboBox fx:id="cbProductName" prefHeight="25.0" prefWidth="202.0" promptText="Select Product" GridPane.columnIndex="1" />
             <Label text="Amount:" GridPane.rowIndex="1">
                <font>
                   <Font size="13.0" />
                </font></Label>
-            <Label text="Discount Percentage:" GridPane.rowIndex="2">
+            <Spinner fx:id="spAmount" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label layoutX="10.0" layoutY="46.0" text="Money Reduction:" GridPane.rowIndex="2">
                <font>
                   <Font size="13.0" />
-               </font></Label>
-            <Spinner GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Spinner GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </font>
+            </Label>
+            <TextField fx:id="tfMoneyReduction" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label layoutX="10.0" layoutY="76.0" text="Start Day:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="10.0" layoutY="106.0" text="End Day:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="dpStartDay" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <DatePicker fx:id="dpEndDay" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
-      <Button mnemonicParsing="false" prefHeight="54.0" prefWidth="89.0" styleClass="btn" stylesheets="@../../style.css" text="ADD">
+      <Button mnemonicParsing="false" onAction="#addDiscount" prefHeight="29.0" prefWidth="82.0" styleClass="btn" stylesheets="@../../style.css" text="ADD">
          <font>
             <Font name="System Bold Italic" size="17.0" />
          </font></Button>
+      <Pagination fx:id="pgDiscountList" prefHeight="276.0" prefWidth="662.0" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
